--- a/DirectorySolutions/UserControls/FindAndReplaceControls.resx
+++ b/DirectorySolutions/UserControls/FindAndReplaceControls.resx
@@ -144,4 +144,10 @@
   <metadata name="PreAppendErrorProv.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1367, 17</value>
   </metadata>
+  <metadata name="movePathTxtErrorProv.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>105, 15</value>
+  </metadata>
+  <metadata name="genericErrorProv.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
+  </metadata>
 </root>
